--- a/css/feeder.css
+++ b/css/feeder.css
@@ -15,6 +15,14 @@ html, body {
     background-color: #ffffff;
 }
 
+h1 {
+    font-family: 'Raleway', serif;
+    font-size: 64px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    padding-left: 5%;
+}
+
 #canvas {
     position: absolute;
     height: 100%;
@@ -25,7 +33,7 @@ html, body {
 
 #message {
     position: relative;
-    font-family: 'Rosario', serif;
+    font-family: 'Raleway', serif;
     font-size: 64px;
     opacity: 0;
     text-align: center;
@@ -42,9 +50,20 @@ html, body {
 
 #admin_messages {
     width: 90%;
-    height: 90%;
-    padding: 5%;
+    height: 55%;
+    padding-right: 5%;
+    padding-left: 5%;
     overflow: auto;
+    font-size: 12px;
+}
+
+.message_list {
+    width: 100%;
+    text-align: center;
+}
+
+.message_list td {
+    padding: 5px;
 }
 
 #footer {
